--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^13.6.0",
-    "mongoose": "^6.2.7"
+    "mongoose": "^6.2.7",
+    "ms": "^2.1.3"
+  },
+  "devDependencies": {
+    "@types/ms": "^0.7.31"
   }
 }
