--- a/src/config.example.json
+++ b/src/config.example.json
@@ -2,5 +2,6 @@
     "TOKEN": "Token",
     "MONGODB_URI": "URI",
     "PREFIX": "prefix",
-    "MOD_LOG": "id"
+    "MOD_LOG": "id",
+    "MOD_MAIL": "id"
 }
